# src/main/java/com/example/drivebackend/dto/TripUpdateRequest.java
@@ -1,0 +1,7 @@
+package com.example.drivebackend.dto;
+
+public record TripUpdateRequest(
+        String startLocation,
+        String endLocation
+) {
+}
